--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     },
     "dependencies": {
         "gatsby": "^4.19.2",
+        "gatsby-plugin-image": "^2.20.0",
+        "gatsby-plugin-sharp": "^4.20.0",
+        "gatsby-source-filesystem": "^4.20.0",
+        "gatsby-transformer-sharp": "^4.20.0",
+        "npm": "^8.16.0",
         "react": "^18.1.0",
         "react-dom": "^18.1.0"
     },
