--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
         "@types/node": "^17.0.45",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
+        "autoprefixer": "^10.4.12",
+        "gatsby-plugin-postcss": "^5.23.0",
+        "postcss": "^8.4.16",
+        "tailwindcss": "^3.1.8",
         "typescript": "^4.7.4"
     }
 }
