--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "gatsby-transformer-sharp": "^4.20.0",
         "npm": "^8.16.0",
         "react": "^18.1.0",
-        "react-dom": "^18.1.0"
+        "react-dom": "^18.1.0",
+        "react-social-icons": "^5.14.0",
+        "react-spotify-embed": "^0.2.3"
     },
     "devDependencies": {
         "@types/node": "^17.0.45",
