--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "typecheck": "tsc --noEmit"
     },
     "dependencies": {
+        "bootstrap": "^5.2.1",
         "gatsby": "^4.19.2",
         "gatsby-plugin-image": "^2.20.0",
         "gatsby-plugin-sharp": "^4.20.0",
@@ -23,7 +24,9 @@
         "gatsby-transformer-sharp": "^4.20.0",
         "npm": "^8.16.0",
         "react": "^18.1.0",
+        "react-bootstrap": "^2.5.0",
         "react-dom": "^18.1.0",
+        "react-router-dom": "^6.4.1",
         "react-social-icons": "^5.14.0",
         "react-spotify-embed": "^0.2.3"
     },
