--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "bootstrap": "^5.2.1",
         "gatsby": "^4.19.2",
+        "gatsby-plugin-anchor-links": "^1.2.1",
         "gatsby-plugin-image": "^2.20.0",
         "gatsby-plugin-sharp": "^4.20.0",
         "gatsby-source-filesystem": "^4.20.0",
